implemented everything else

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <div>
 
       <div id="publisher2"></div>
-      <div class="buttons">
+      <div class="buttons2">
         <img id="poop2" src="/images/poop.png">
         <img id="pound2" src="/images/like.png">
         <p id="counter2">0</p>
@@ -32,9 +32,16 @@
     </div>
   <br>
 
+  <center>
+      <button onclick="this.disabled=true;readyDancer();">READY!</button>
+  </center>
+  <br>
+  <br>
+
    <center>
      <div id="player"></div>
    </center>
+
   <!-- scripts -->
 
   <script src="videoPlaySync.js"> </script>
