fixed button and bugs

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
   <br>
 
   <center>
-      <button onclick="this.disabled=true;readyDancer();">READY!</button>
+      <button onclick="readyDancer();">READY!</button>
   </center>
   <br>
   <br>
